--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <div class="panelbottom">
             </div>
         </div>
+        <div class="class"></div>
     </div>
     <script src="script.js"></script>
 </body>
